// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class=" atds-select"
  >
    <button
      aria-controls="atds-select-list"
      aria-haspopup="true"
      class="atds-select__label"
      data-testid="AtdsSelectButton"
    >
      <p
        class="undefined atds-text atds-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="atds-select__caret atds-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      class="atds-select__overlay "
      id="atds-select-list"
      role="menu"
      style="top: 0px;"
    >
      <li
        aria-checked="false"
        aria-label="Strict Black"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-checked="false"
        aria-label="Heavenly Green"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-checked="false"
        aria-label="Sweet Pink"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class=" atds-select"
  >
    <button
      aria-controls="atds-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="atds-select__label"
      data-testid="AtdsSelectButton"
    >
      <p
        class="undefined atds-text atds-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="atds-select__caret atds-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      class="atds-select__overlay atds-select__overlay--open"
      id="atds-select-list"
      role="menu"
      style="top: 0px;"
    >
      <li
        aria-checked="false"
        aria-label="Strict Black"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-checked="false"
        aria-label="Heavenly Green"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-checked="false"
        aria-label="Sweet Pink"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class=" atds-select"
  >
    <button
      aria-controls="atds-select-list"
      aria-haspopup="true"
      class="atds-select__label"
      data-testid="AtdsSelectButton"
    >
      <p
        class="undefined atds-text atds-text-base"
      >
        Strict Black
      </p>
      <svg
        class="atds-select__caret atds-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      class="atds-select__overlay "
      id="atds-select-list"
      role="menu"
      style="top: 0px;"
    >
      <li
        aria-checked="true"
        aria-label="Strict Black"
        class="atds-select__option
                                atds-select__option--selected
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Strict Black
        </p>
        <svg
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1rem"
        >
          <path
            d="M5 13l4 4L19 7"
          />
        </svg>
      </li>
      <li
        aria-checked="false"
        aria-label="Heavenly Green"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-checked="false"
        aria-label="Sweet Pink"
        class="atds-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined atds-text atds-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
